WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
278286
Progress is not being published when using WKDownload
https://bugs.webkit.org/show_bug.cgi?id=278286
Summary
Progress is not being published when using WKDownload
Per Arne Vollan
Reported
2024-08-17 19:46:23 PDT
Progress of download is not being published to the system when using WKDownload
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-08-17 19:46:35 PDT
<
rdar://problem/134164470
>
Per Arne Vollan
Comment 2
2024-08-17 19:51:07 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/32353
EWS
Comment 3
2024-08-23 21:21:00 PDT
Committed
282693@main
(6d6a7a3565b2): <
https://commits.webkit.org/282693@main
> Reviewed commits have been landed. Closing PR #32353 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug