Progress is not being published when using WKDownload https://bugs.webkit.org/show_bug.cgi?id=278286 rdar://134164470

Reviewed by Alex Christensen.

Progress of download is not being published when using WKDownload. Address this by explicitly
calling function to publish progress when the client provides the download location. This is
a good place to start publishing, since we then have the correct destination URL to publish
with. There is no behavior change, since we check a runtime flag that is off by default
before calling function to start publishing. This patch also guards against the function
being called multiple times.

* Source/WebKit/NetworkProcess/Downloads/cocoa/DownloadCocoa.mm:
(WebKit::Download::publishProgress):
* Source/WebKit/UIProcess/Downloads/DownloadProxy.cpp:
(WebKit::DownloadProxy::decideDestinationWithSuggestedFilename):
* Source/WebKit/UIProcess/Downloads/DownloadProxy.h:
* Source/WebKit/UIProcess/Downloads/DownloadProxyCocoa.mm:
(WebKit::DownloadProxy::publishProgress):

Canonical link: https://commits.webkit.org/282693@main